--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
       - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v1
-        # uses: docker://reviewdog/action-golangci-lint:v1 # pre-build docker image
+        # uses: reviewdog/action-golangci-lint@v1
+        uses: docker://reviewdog/action-golangci-lint:v1 # pre-build docker image
         with:
-          github_token: ${{ secrets.GITHUB_ACTIONS }}
+          github_token: ${{ secrets.github_token }}
