--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ golangci_lint:
     - golangci-lint run -v
 test:
   image:
-    name: golang:1.12-alpine
+    name: golang:1.12
     entrypoint: [""]
   tags:
     - docker
