--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -10,14 +10,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 10
-      - name: Set the expected Go version
-        run: |
-          GOMOD_VERSION=$(cat go.mod | grep -i "go " | sed -e "s/go //g")
-          echo "GOMOD_VERSION=${GOMOD_VERSION}" >> $GITHUB_ENV
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "${{ env.GOMOD_VERSION }}"
+          go-version: 1.16
       - name: Generating the files
         run: |
           go run generate/go-generate.go $(pwd)
