BUILD/MINOR: check-commit: trigger only on pull requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,9 @@ diff:
     - go run generate/go-generate.go $(pwd)
     - test -z "$(git diff 2> /dev/null)" || echo 'Files are not generated, issue `go run generate/go-generate.go $(pwd)` and commit the result'
     - test -z "$(git ls-files --others --exclude-standard 2> /dev/null)" || exit 'Generation created untracked files, cannot proceed'
+  only:
+    - merge_requests
+    - branches
 golangci_lint:
   stage: lint
   image:
@@ -22,6 +25,9 @@ golangci_lint:
     - go
   script:
     - golangci-lint run --enable-all
+  only:
+    - merge_requests
+    - branches
 lint-commit-msg:
   stage: lint
   image:
@@ -31,6 +37,8 @@ lint-commit-msg:
     - go
   script:
     - /check
+  only:
+    - merge_requests
 tidy:
   stage: lint
   image:
@@ -41,6 +49,9 @@ tidy:
   script:
     - go mod tidy
     - test -z "$(git diff 2> /dev/null)" || exit 'Go modules not tidied, issue \`go mod tidy\` and commit the result'
+  only:
+    - merge_requests
+    - branches
 test:
   stage: test
   image:
@@ -51,3 +62,6 @@ test:
   script:
     - go build -v .
     - go test -v ./...
+  only:
+    - merge_requests
+    - branches
