--- a/.github/workflows/diff.yml
+++ b/.github/workflows/diff.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Generating the files
         run: |
           go run generate/go-generate.go $(pwd)
-          test -z "$(git diff 2> /dev/null)" || echo 'Files are not generated, issue `go run generate/go-generate.go $(pwd)` and commit the result'
+          test -z "$(git diff 2> /dev/null)" || exit 'Files are not generated, issue `go run generate/go-generate.go $(pwd)` and commit the result'
           test -z "$(git ls-files --others --exclude-standard 2> /dev/null)" || exit 'Generation created untracked files, cannot proceed'
