--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ golangci_lint:
 lint-commit-msg:
   stage: lint
   image:
-    name: $CI_REGISTRY_GO/check-commit:v2.1.0
+    name: $CI_REGISTRY_GO/commit-check:3.0.0
     entrypoint: [""]
   tags:
     - go
