MAJOR: use golangcilint 1.43.0
Signed-off-by: Zlatko Bratkovic <zbratkovic@haproxy.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ diff:
 golangci_lint:
   stage: lint
   image:
-    name: $CI_REGISTRY_GO/lint:latest
+    name: $CI_REGISTRY_GO/lint:1.43.0
     entrypoint: [""]
   tags:
     - go
