--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,8 +22,9 @@ jobs:
           go-version: 1.18
       - name: Generating the files
         run: |
-          go run generate/go-generate.go $(pwd)
-          test -z "$(git diff 2> /dev/null)" || exit 'Files are not generated, issue `go run generate/go-generate.go $(pwd)` and commit the result'
+          make generate
+          git diff
+          test -z "$(git diff 2> /dev/null)" || exit 'Files are not generated or formatted with gofumpt, issue `make generate` and commit the result'
           test -z "$(git ls-files --others --exclude-standard 2> /dev/null)" || exit 'Generation created untracked files, cannot proceed'
   lint:
     name: golangci-lint
