--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: 1.20
       - name: Generating the files
         run: |
           make generate
@@ -33,8 +33,21 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: docker://ghcr.io/haproxytech/go-linter:1.50.0
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Lint
+        run: |
+          make lint
   tidy:
     name: go mod tidy
     needs: ["generate"]
@@ -45,7 +58,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: 1.20
       - name: tidy
         run: go mod tidy
       - name: changes
@@ -55,10 +68,10 @@ jobs:
     needs: ["lint","tidy"]
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.19
+    - name: Set up Go 1.20
       uses: actions/setup-go@v1
       with:
-        go-version: 1.19
+        go-version: 1.20
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
