--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,6 +48,33 @@ jobs:
       - name: Lint
         run: |
           make lint
+  license:
+    name: license-check
+    needs: ["generate"]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: 'go.mod'
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: go-licenses install
+        run: go install github.com/google/go-licenses@latest
+      - name: Lint
+        run: |
+          PROJECT="$(go list -m)"
+          ALLOWED_LICENSES="$(<.allowed_license_types)"
+          go-licenses report --ignore "$PROJECT" .
+          go-licenses check --allowed_licenses="$ALLOWED_LICENSES" --ignore "$PROJECT" .
   tidy:
     name: go mod tidy
     needs: ["generate"]
